--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1210,24 +1210,74 @@ label.checkout__line_label {
     border: none;
     font-size: 12px;
     font-weight: 600;
+}
+
+.textarea_wrap{
+    padding-bottom: 21px;
+}
+
+.checkout_credit_block{
+    padding-bottom: 21px;
+    margin-bottom: 21px;
+}
+
+.wrap-line_radio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 42px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 3px;
     
 }
 
-
-
-.form__line_button {
+.checkout__line_button {
     width: 100%;
     height: 38px;
     border-radius: 38px;
     border: none;
     background-color: #0085FF;
-
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
     text-align: center;
-
     color: #FFFFFF;
     padding: 8px 0 10px;
+}
+
+.checkout_radio_btn {
+    width: 100%;
+}
+
+.checkout_radio_btn input[type=radio] {
+    display: none;
+}
+
+.checkout_radio_btn label {
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 12px;
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+    font-weight: 600;
+    width: 100%;
+    margin: 0;
+}
+
+/* Checked */
+.checkout_radio_btn input[type=radio]:checked + label {
+    background: #0085FF;
+    color: #fff;
+}
+
+/* Disabled */
+.checkout_radio_btn input[type=radio]:disabled + label {
+    background: #efefef;
+    color: #666;
 }
