--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1121,11 +1121,17 @@ label.form__line_label {
     /* position: fixed; */
 }
 
+
 .checkout_img{
-    position: relative;
     margin-top: 30px;
-    /* position: fixed; */
-    
+ width: 100%;
+ height: 100%;   
+ padding-bottom: 100px;
+}
+
+.checkout_product_img{
+    position: sticky;
+    top:0;
 }
 
 .checkout_title{
@@ -1280,4 +1286,9 @@ label.checkout__line_label {
 .checkout_radio_btn input[type=radio]:disabled + label {
     background: #efefef;
     color: #666;
+}
+
+.range_wrap{
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
